# securityOperator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
crds/: localldappasswordpolicy.yaml  localldapuser.yaml
docs/: DEVELOPMENT.md  README.md
helm-chart/: Chart.yaml  values.yaml
helm-chart/crds/: linuxrolebinding.yaml  localldapgroup.yaml  localldapuser.yaml
helm-chart/templates/: _helpers.tpl  crds.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
src/security_operator/: __init__.py  __main__.py
src/security_operator/handlers/: __init__.py  ldap_group.py  ldap_user.py  linux_role_binding.py  password_policy.py
src/security_operator/models/: __init__.py  ldap_group.py  ldap_user.py  linux_role_binding.py  password_policy.py
src/security_operator/utils/: discovery.py  ldap_client.py  linux_groups.py
tests/integration/: test_operator_integration.py
tests/unit/: test_ldap_user_handler.py  test_models.py
